--- a/nexus-frontend/public/index.html
+++ b/nexus-frontend/public/index.html
@@ -7,7 +7,7 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Web site created using create-react-app"
+      content="NEXUS Command Center - Intelligent Business Development Platform for Government Contracting, Sales, and Project Management"
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
@@ -24,7 +24,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>React App</title>
+    <title>NEXUS Command Center</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
