--- a/nexus-frontend/public/index.html
+++ b/nexus-frontend/public/index.html
@@ -25,6 +25,9 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
     <title>NEXUS Command Center</title>
+    
+    <!-- Google Custom Search Engine -->
+    <script async src="https://cse.google.com/cse.js?cx=94a560f2e338647f2"></script>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
